cmake_minimum_required(VERSION 3.10)
project(Leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(Leetcode main.cpp deserialize.cpp NestedInteger.cpp isOneEditDistance.cpp lengthLongestPath.cpp rearrangeString.cpp removeDuplicateLetters.cpp getFactors.cpp getPermutation.cpp deserialize.cpp NestedInteger.cpp kSmallestPairs.cpp longestPalindrome.cpp letterCombinations.cpp findSubstring.cpp solveSudoku.cpp minWindow.cpp fractionToDecimal.cpp findRepeatedDnaSequences.cpp reverseBits.cpp stringPermulation.cpp removeThreeMore.cpp Composite.cpp Composite.h leastInstruction.cpp removeElement.cpp digitCount.cpp bubbleSort.cpp insertionSort.cpp selectionSort.cpp replaceValues.cpp reverseArray.cpp evenOdd.cpp manchester.cpp printPattern.cpp nearlySortedArray.cpp calculate.cpp isMatch.cpp search.cpp substringK.cpp lengthOfLongestSubstringKDistinct.cpp truck.cpp TreeNode.cpp TreeNode.h findMaxAverageSubtree.cpp highFive.cpp twoSumClosest.cpp removeObstacle.cpp)